link css and add page heading

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Excursion App Page</title>
+  <link rel="stylesheet" href="./resources/css/style.css" type="text/css" />
 </head>
 <body>
+  <h1>Discover hidden places in the world around you</h1>
 
 </body>
 </html>
