--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 </head>
 <body>
   <h1>Discover hidden places in the world around you</h1>
-
+  <a href="./index.html">Download Excursion (Coming Soon!)</a>
+  <div class="video">
+    <video src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" autoplay loop>Sorry, your broswer doesn't support this video content</video>
+  </div>
+  <h2>Your personal travel guide</h2>
+  <p>Excursion remembers places you like and recommends new points of interest around you.</p>
+  <div>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Campsite at Dusk">
+  </div>
+  <div class="icon">
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="Cellphone Icon">
+  </div>
+  <h2>Coming Soon for iPhone and Android</h2>
+  <a href="./index.html">Download Excursion (Coming Soon!)</a>
+  <footer>&copy Excursion</footer>
 </body>
 </html>
